--- a/packages/client/src/components/layout.module.css
+++ b/packages/client/src/components/layout.module.css
@@ -11,3 +11,9 @@
   border-radius: 10px;
   border: 2px solid #f1f1f1;
 }
+.layout-container {
+  height: '100vh' !important;
+  paddingtop: 0 !important;
+  maxwidth: '1280px' !important;
+  margininline: 'auto' !important;
+}
