избавилась от </br>

--- a/packages/client/src/pages/Landing/Landing.module.css
+++ b/packages/client/src/pages/Landing/Landing.module.css
@@ -19,8 +19,14 @@
   line-height: 2;
 }
 
-.pixel {
+.pixelBlock {
   font-family: 'Press Start 2P', cursive;
+  display: block;
+}
+
+.pixelInline {
+  font-family: 'Press Start 2P', cursive;
+  display: inline;
 }
 
 .text {
